feat: implement card pagination and deletion functionality

--- a/web/index.html
+++ b/web/index.html
@@ -92,6 +92,10 @@
           </button>
         </h2>
         <div id="list" class="flex flex-col gap-2"></div>
+        <div
+          id="pagination"
+          class="flex gap-2 items-center justify-center mt-4 flex-wrap text-xs"
+        ></div>
       </section>
 
       <section
