--- a/web/index.html
+++ b/web/index.html
@@ -178,6 +178,15 @@
             placeholder="APPLE II"
             class="px-2 py-2 border border-gray-300 dark:border-gray-600 rounded-lg bg-white dark:bg-gray-700 dark:text-gray-100"
           />
+          <input
+            id="title_font_size"
+            type="number"
+            min="8"
+            max="120"
+            value="48"
+            class="px-2 py-2 border border-gray-300 dark:border-gray-600 rounded-lg bg-white dark:bg-gray-700 dark:text-gray-100 w-16"
+            title="Tamaño de fuente del título"
+          />
         </div>
 
         <div
