--- a/web/index.html
+++ b/web/index.html
@@ -283,9 +283,18 @@
             id="dither"
             class="px-2 py-2 border border-gray-300 dark:border-gray-600 rounded-lg bg-white dark:bg-gray-700 dark:text-gray-100"
           >
-            <option value="0">Sin dithering</option>
-            <option value="1">Suave</option>
-            <option value="2">Fuerte</option>
+            <option value="none">Sin dithering</option>
+            <option value="sierra_lite">Sierra Lite (Quick results)</option>
+            <option value="burkes">Burkes (General purpose)</option>
+            <option value="floyd_steinberg" selected>
+              Floyd-Steinberg (Popular)
+            </option>
+            <option value="sierra">Sierra (Balanced quality)</option>
+            <option value="atkinson">Atkinson (High contrast)</option>
+            <option value="stucki">Stucki (Maximum quality)</option>
+            <option value="jarvis_judice_ninke">
+              Jarvis-Judice-Ninke (Smooth gradients)
+            </option>
           </select>
         </div>
 
